--- a/src/Scenes/Palette/Palette.scene.css
+++ b/src/Scenes/Palette/Palette.scene.css
@@ -1,8 +1,24 @@
 .Palette {
-  height: 100vh
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .Palette-colors {
   height: 90%;
-  margin: auto
+  /* margin: auto */
+}
+
+.Palette-footer {
+  background-color: white;
+  height: 5vh;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  font-weight: bold;
+}
+
+.Palette-footer.emoji {
+  font-size: 1rem;
+  margin: 0 1rem;
 }
