--- a/src/components/ColorBox.component.css
+++ b/src/components/ColorBox.component.css
@@ -9,7 +9,17 @@
   margin-bottom: -3.5px;
 }
 
-.copy-button {
+.SingleColorPalette .ColorBox {
+  height: 50%
+}
+
+.ColorBox.go-back {
+  background: black;
+  position: relative;
+}
+
+.copy-button,
+.back-button {
   width: 100px;
   height: 30px;
   position: absolute;
@@ -24,8 +34,12 @@
   line-height: 30px;
   color: white;
   border: none;
-  opacity: 0;
   text-transform: uppercase;
+  text-decoration: none;
+}
+
+.copy-button {
+  opacity: 0;
 }
 
 .ColorBox:hover .copy-button {
