Adjust text color based on Luminance

--- a/src/components/ColorBox.component.css
+++ b/src/components/ColorBox.component.css
@@ -56,6 +56,10 @@
   color: black;
 }
 
+.box-content .light-text {
+  color: lightgray;
+}
+
 .see-more {
   background: rgba(255, 255, 255, 0.3);
   position: absolute;
@@ -67,6 +71,10 @@
   width: 60px;
   text-align: center;
   line-height: 30px;
+}
+
+.ColorBox .dark-text {
+  color: rgba(0, 0, 0, 0.5)
 }
 
 .copy-overlay {
